@startuml
package AcademicCourse{
  class AcademicCourse
}
package Activity{
    package AfterSchool{

        class AfterSchool{
            name : String
        }
        class AfterSchoolEdition{
            period: String
            timetable: String
        }
        class AfterSchoolRegistration

        AfterSchool *-- "1..N" AfterSchoolEdition: ""
        AfterSchoolEdition o-- AcademicCourse

        AfterSchoolRegistration o-- AfterSchoolEdition

        abstract class Funding
        class Cultural
        class Sport
        class NoFunding
        Funding <|-- Cultural
        Funding <|-- Sport
        Funding <|-- NoFunding

          AfterSchool o-- Funding
    }
    abstract class PricePerLevel{
        levels: String
        price_for_member: float
        price_for_no_member: float
    }

    AfterSchoolEdition <|-- PricePerLevel
}
package Family{
    class Child
    class Holder
}
AfterSchoolRegistration o-- Child
AfterSchoolRegistration o-- Holder

@enduml
